Improve project documentation